--- a/mdn-site/index.html
+++ b/mdn-site/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="styles/style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
-    <title>My test page</title>
-  </head>
-  <body>
-    <p class="editor-note">
-      <strong>Fərəh Feyzullayev</strong>
-    </p>
-    <h1>Batman Dark Knight <h3>By Christopher Nolan</h3></h1>
-    <img src="images/joker.png" alt="batman:dark knight filmden joker">
-    <p>Joker Gangstarları təhdid edərkən</p>
-    <ul>
-      <li>IMDb: 9/10</li>
-      <li id="my-id">Rotten Tomatoes: 94%</li>
-    </ul>
-    <ol>
-      <li>IMDb: 9/10</li>
-      <li id="my-id">Rotten Tomatoes: 94%</li>
-    </ol>
-    <a href="https://www.filmmodu.org/the-dark-knight-altyazili-izle">Filmi izlə</a>
-    <script src="scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link href="styles/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
+  <title>My test page</title>
+</head>
+
+<body>
+  <p class="editor-note">
+    <strong>
+      Created by Fərəh Feyzullayev
+    </strong>
+  </p>
+  <h1>Batman Dark Knight <h3>By Christopher Nolan</h3>
+  </h1>
+  <img src="images/joker.png" alt="batman:dark knight filmden joker">
+  <p>Joker Gangstarları təhdid edərkən</p>
+  <ul>
+    <li>IMDb: 9/10</li>
+    <li id="my-id">Rotten Tomatoes: 94%</li>
+  </ul>
+  <ol>
+    <li>IMDb: 9/10</li>
+    <li id="my-id">Rotten Tomatoes: 94%</li>
+  </ol>
+  <a href="https://www.filmmodu.org/the-dark-knight-altyazili-izle">Filmi izlə</a>
+  <button>Change User</button>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
